[tool.poetry]
name = "drug-release-analysis"
version = "0.1.0"
description = ""
authors = ["Sairam Krish <haisairam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
plotly = "^5.22.0"
statsmodels = "^0.14.2"
streamlit = "^1.38.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
src = ["."]
target-version = "py39"
fix = true
line-length = 120
select = ["E", "F", "N801", "N802", "N803", "N805", "N806"]

[tool.ruff.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.flake8-type-checking]
strict = true

[tool.ruff.isort]
combine-as-imports = true
